fixed tooltip spacing

--- a/styles.css
+++ b/styles.css
@@ -49,6 +49,7 @@ main {
     padding: 20px;
     margin-left: 160px;
     margin-right: 160px;
+    max-width: 800px;
     text-align: left;
 }
 
@@ -75,12 +76,11 @@ a {
     border-bottom: 1px dotted black;
     font-family: 'Courier New', Courier, monospace;
     padding: 0px;
-    
 }
 
 .tooltip .tooltiptext {
     visibility: hidden;
-    background-color: rgba(40,40,40,0.85);
+    background-color: rgba(40, 40, 40, 0.85);
     color: #fff;
     text-align: center;
     padding: 10px;
@@ -91,7 +91,7 @@ a {
     bottom: 120%;
     left: 50%;
     margin-left: -80px;
-  }
+}
 
 .tooltip:hover .tooltiptext {
     visibility: visible;
@@ -106,5 +106,5 @@ a {
     margin-left: -5px;
     border-width: 5px;
     border-style: solid;
-    border-color: black transparent transparent transparent;
-  }
+    border-color: rgba(40, 40, 40, 0.85) transparent transparent transparent;
+}
